Uml 2978 Add System Message feature to Admin portal (#2452)
* fix keys

* created system message page to admin portal

* refactoring system message page

* gohtml template layout

* started connecting up to parameter store code (WIP)

* test for server.go is passing now

* WIP - getting tests to work

* test now working

* write method and test WIP not yet working

* test for system message, uses prefix in ssm connection

* mocked out service in tests (WIP)

* WIP textareas are populated by hard-coded strings -  next step they will
come from the paramter store via the service

* call service to get textarea values

* fix golint errors

* golint fix

* WIP now saves to localhost parameter store but handler needs fixing

* WIP fixes

* refactored template and amended handler

* added overwrite to ssm PutSystemMessage

* added test for PutParameter functionality

* refactor of handler with bilingual message validation check

* Added delete message & success/error messages

* service message removed message

* tests for data/system_message

* tests for systemmessage handler

* reformatting for linting etc

* linting fix

* later onelogin mock

* use SSM URL

* test coverage for system message handler parse form error

* refactoring system message handler test.

* log endpoint on startup, to debug issue in aws

* log to stdout

* change env var

* Try with no baseendpoint

* fix linter error

* fix linter errors

* fix linter

* Fix SSM endpoint

* amended to systemmessage handler test to include no validation error

* added pointer

* lint

* extra test coverage - data side

* env var

* Add environment name

* use environment name as prefix when accessing paramter store

* fixes

* use /system-message/ENV/en/cy for for paramter store

* fix

* fix prefix logic

* keep linter happy / improve comment

---------

Co-authored-by: Lowenna Baggaley <lowenna.baggaley@digit

--- a/service-admin/web/templates/header.partial.gohtml
+++ b/service-admin/web/templates/header.partial.gohtml
@@ -37,6 +37,10 @@
             <li class="moj-primary-navigation__item">
                 <a class="moj-primary-navigation__link" {{ if eq .Path "/stats" }}aria-current="page"{{ end }} href="/stats">Measuring impact</a>
             </li>
+
+            <li class="moj-primary-navigation__item">
+              <a class="moj-primary-navigation__link" {{ if eq .Path "/system-message" }}aria-current="page"{{ end }} href="/system-message">System Message</a>
+            </li>
           </ul>
 
         </nav>
