--- a/service-front/app/src/Actor/templates/actor/your-details.html.twig
+++ b/service-front/app/src/Actor/templates/actor/your-details.html.twig
@@ -1,6 +1,6 @@
 {% extends '@actor/layout.html.twig' %}
 
-{% block html_title %}{% trans %}Your details{% endtrans %} - {{ parent() }} {% endblock %}
+{% block html_title %}{% trans %}Settings{% endtrans %} - {{ parent() }} {% endblock %}
 
 {% block content %}
 
@@ -9,7 +9,7 @@
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-three-quarters">
-                    <h1 class="govuk-heading-xl">{% trans %}Your details{% endtrans %}</h1>
+                    <h1 class="govuk-heading-xl">{% trans %}Settings{% endtrans %}</h1>
 
                             <dl class="govuk-summary-list">
 
