--- a/service-front/app/src/Common/templates/partials/account-bar.html.twig
+++ b/service-front/app/src/Common/templates/partials/account-bar.html.twig
@@ -8,7 +8,7 @@
     </p>
     <div class="govuk-body-s" id="account-bar-navigation">
         <ul>
-            <li><a href="{{ path('your-details') }}" class="govuk-link">{% trans %}Your details{% endtrans %}</a></li>
+            <li><a href="{{ path('your-details') }}" class="govuk-link">{% trans %}Settings{% endtrans %}</a></li>
             <li><a href="{{ path('lpa.dashboard') }}" class="govuk-link">{% trans %}Your LPAs{% endtrans %}</a></li>
             <li><a href="{{ path('logout') }}" class="govuk-link">{% trans %}Sign out{% endtrans %}</a></li>
         </ul>
