--- a/service-front/app/src/Actor/templates/actor/confirm-delete-account.html.twig
+++ b/service-front/app/src/Actor/templates/actor/confirm-delete-account.html.twig
@@ -6,7 +6,7 @@
 
     <div class="govuk-width-container">
         <div role="navigation" aria-labelledby="back-link-navigation">
-            <a href="{{ path('your-details') }}" class="govuk-back-link" id="back-link-navigation">{% trans %}Back{% endtrans %}</a><br>
+            <a href="{{ path('settings') }}" class="govuk-back-link" id="back-link-navigation">{% trans %}Back{% endtrans %}</a><br>
         </div>
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
@@ -26,7 +26,7 @@
                         <li>{% trans %}the <abbr title="lasting powers of attorney">LPAs</abbr> are still valid{% endtrans %}</li>
                         <li>{% trans %}you have not been removed as an attorney{% endtrans %}</li>
                     </ul><br>
-                    <a href="{{ path('your-details') }}" role="button" draggable="false" class="govuk-button govuk-button govuk-button--secondary govuk-!-margin-right-1">
+                    <a href="{{ path('settings') }}" role="button" draggable="false" class="govuk-button govuk-button govuk-button--secondary govuk-!-margin-right-1">
                         {% trans %}No, return to my details{% endtrans %}
                     </a>
                     <a href="{{ path('delete-account') }}" role="button" draggable="false" class="govuk-button govuk-button--warning">
