changed content of 410.html.twig

--- a/service-front/app/src/Common/templates/error/410.html.twig
+++ b/service-front/app/src/Common/templates/error/410.html.twig
@@ -9,7 +9,7 @@
                 <div class="govuk-grid-column-two-thirds">
                     <h1 class="govuk-heading-xl">{% trans %}Gone{% endtrans %}</h1>
                     <p class="govuk-body">
-                        {% trans %}This page is no longer available and has been moved permanently.{% endtrans %}
+                        {% trans %}This page is no longer available and has been removed permanently.{% endtrans %}
                     </p>
                     <p class="govuk-body">
                         {% trans %}If you entered a web address, check it's correct.{% endtrans %}
