Add updated js-enabled code

--- a/service-admin/web/templates/default.layout.gohtml
+++ b/service-admin/web/templates/default.layout.gohtml
@@ -21,8 +21,9 @@
 
     <body class="govuk-template__body app-body-class">
       <script>
-        document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
+        document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
       </script>
+
 
       <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
 
