Replace warning class with visually hidden due to deprecation

--- a/service-front/app/src/Actor/templates/actor/login.html.twig
+++ b/service-front/app/src/Actor/templates/actor/login.html.twig
@@ -32,7 +32,7 @@
                         <div class="govuk-warning-text">
                             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                             <strong class="govuk-warning-text__text">
-                                <span class="govuk-warning-text__assistive">Warning</span>
+                                <span class="govuk-visually-hidden">Warning</span>
                                 {% trans  %}If you made an <abbr title="lasting power of attorney"> LPA </abbr> online, you'll still need to create an account on this service to use the LPA online.{% endtrans %}
                             </strong>
                         </div>
