--- a/service-front/app/src/Actor/templates/actor/partials/warning-upcoming-service-downtime.html.twig
+++ b/service-front/app/src/Actor/templates/actor/partials/warning-upcoming-service-downtime.html.twig
@@ -2,7 +2,7 @@
     <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
     <div>
         <strong class="govuk-warning-text__text">
-            <span class="govuk-warning-text__assistive">Warning</span>
+            <span class="govuk-visually-hidden">Warning</span>
             {% trans %}This service will be unavailable between 9pm on Friday 31st March 2023 and 9:30am on Saturday 1st April 2023.{% endtrans %}
             </strong>
     </div>
