--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/lpa-details.html.twig
@@ -82,7 +82,7 @@
                 <div class="govuk-warning-text">
                     <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                     <strong class="govuk-warning-text__text">
-                        <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                        <span class="govuk-visually-hidden">{% trans %}Warning{% endtrans %}</span>
                         {% trans %}
                             Some words in these instructions or preferences have been removed by the court of
                             protection. To check which words have been removed, please ask to see the paper
