--- a/service-front/app/src/Viewer/templates/viewer/viewer-terms-of-use.html.twig
+++ b/service-front/app/src/Viewer/templates/viewer/viewer-terms-of-use.html.twig
@@ -39,7 +39,7 @@
                     <div class="govuk-warning-text">
                         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                         <strong class="govuk-warning-text__text">
-                            <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                            <span class="govuk-visually-hidden">{% trans %}Warning{% endtrans %}</span>
                             {% trans %}It can be a criminal offence to use someone’s personal information without their permission.{% endtrans %}</p>
                         </strong>
                     </div>
