--- a/service-front/app/src/Actor/templates/actor/actor-terms-of-use.html.twig
+++ b/service-front/app/src/Actor/templates/actor/actor-terms-of-use.html.twig
@@ -25,7 +25,7 @@
                     <div class="govuk-warning-text">
                         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                         <strong class="govuk-warning-text__text">
-                            <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                            <span class="govuk-visually-hidden">{% trans %}Warning{% endtrans %}</span>
                         {% trans %}
                         You cannot use a download or print out of the
                         <abbr title="lasting power of attorney">LPA</abbr> summary in place of the original paper
