--- a/service-front/app/src/Actor/templates/actor/check-access-codes.html.twig
+++ b/service-front/app/src/Actor/templates/actor/check-access-codes.html.twig
@@ -59,7 +59,7 @@
                             <div class="govuk-warning-text">
                                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                                 <strong class="govuk-warning-text__text">
-                                    <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                                    <span class="govuk-visually-hidden">{% trans %}Warning{% endtrans %}</span>
                                     {{ include('@actor/partials/lpa-instructions-preferences-warning-message.html.twig') }}
                                 </strong>
                             </div>
