--- a/service-front/app/src/Actor/templates/actor/create-account.html.twig
+++ b/service-front/app/src/Actor/templates/actor/create-account.html.twig
@@ -50,7 +50,7 @@
                                 <div class="govuk-warning-text">
                                     <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                                     <strong class="govuk-warning-text__text">
-                                        <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                                        <span class="govuk-visually-hidden">{% trans %}Warning{% endtrans %}</span>
                                         {% trans %}Never share your password with anyone.{% endtrans %}
                                     </strong>
                                 </div>
