--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -166,7 +166,7 @@
             <div class="govuk-warning-text">
                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                 <strong class="govuk-warning-text__text">
-                    <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                    <span class="govuk-visually-hidden">{% trans %}Warning{% endtrans %}</span>
                     {% trans %}You cannot use a download or printout of this <abbr title="lasting power of attorney">LPA</abbr> summary. Always use the original paper <abbr title="lasting power of attorney">LPA</abbr> or give someone an access code.{% endtrans %}
                 </strong>
             </div>
