--- a/service-front/app/src/Common/templates/partials/lpa-summary-details/iap-macros.html.twig
+++ b/service-front/app/src/Common/templates/partials/lpa-summary-details/iap-macros.html.twig
@@ -15,7 +15,7 @@
     <div class="govuk-warning-text">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
-            <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+            <span class="govuk-visually-hidden">{% trans %}Warning{% endtrans %}</span>
             {{ text|raw }}
         </strong>
     </div>
@@ -25,7 +25,7 @@
     <div class="govuk-warning-text iap-wait">
         <strong class="govuk-warning-text__text">
             <div class="iap-loader"></div>
-            <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+            <span class="govuk-visually-hidden">{% trans %}Warning{% endtrans %}</span>
             {{ text|raw }}
         </strong>
     </div>
