--- a/service-front/app/src/Viewer/templates/viewer/check-code-found.html.twig
+++ b/service-front/app/src/Viewer/templates/viewer/check-code-found.html.twig
@@ -34,7 +34,7 @@
                     <div class="govuk-warning-text">
                         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                         <strong class="govuk-warning-text__text">
-                            <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                            <span class="govuk-visually-hidden">{% trans %}Warning{% endtrans %}</span>
                             {% trans %}If this is not the right LPA, ask the donor or attorney to check the access code.{% endtrans %}
                         </strong>
                     </div>
