Update section positioning for tags to show correctly

--- a/service-front/web/src/stylesheets/_govuk-accordion.scss
+++ b/service-front/web/src/stylesheets/_govuk-accordion.scss
@@ -1,5 +1,8 @@
 /* ///////////////// Access code items ///////////////// */
 .govuk-accordion {
+  &__section{
+      position: relative;
+  }
   &__section-heading {
     .govuk-tag {
       position: absolute;
