Template, JS and CSS changes to implement new header design
Behind the allow_gov_one_login feature flag.

--- a/service-front/app/src/Common/templates/layout/default.html.twig
+++ b/service-front/app/src/Common/templates/layout/default.html.twig
@@ -78,7 +78,11 @@
     </div>
 </form>
 
-{{ include("@partials/header/default.html.twig") }}
+{% if feature_enabled('allow_gov_one_login') %}
+    {{ include("@partials/header/one-login.html.twig") }}
+{% else %}
+    {{ include("@partials/header/default.html.twig") }}
+{% endif %}
 
 {% block content %}{% endblock %}
 
