--- a/service-front/app/src/Actor/templates/actor/partials/service-message.html.twig
+++ b/service-front/app/src/Actor/templates/actor/partials/service-message.html.twig
@@ -9,7 +9,7 @@
 {# {% set cy_message = 'Add your Welsh message here' %} #}
 {# {% set cy_additional = 'Add your Welsh additional text here' %} #}
 
-{% if en_message is defined %}
+{% if en_message is defined and en_message != null %}
     <div class="govuk-notification-banner govuk-notification-banner--pagetop" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
         <div class="govuk-notification-banner__header">
             <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
