Further refactoring work around how the application name is populated.
Additional work to the template organisation.

--- a/service-front/app/src/Common/templates/common/contact-us.html.twig
+++ b/service-front/app/src/Common/templates/common/contact-us.html.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/default.html.twig' %}
 
-{% block html_title %}{% trans %}Contact us{% endtrans %} - {{ block('service_name') }} - {{ parent() }}{% endblock %}
+{% block html_title %}{% trans %}Contact us{% endtrans %} - {{ serviceName | trans }} - {{ parent() }}{% endblock %}
 
 {% block content %}
     <div class="govuk-width-container">
