--- a/service-front/app/src/Common/templates/common/cookies.html.twig
+++ b/service-front/app/src/Common/templates/common/cookies.html.twig
@@ -1,6 +1,6 @@
 {% extends '@layout/default.html.twig' %}
 
-{% block html_title %}{% trans %}Cookies{% endtrans %} - {{ block('service_name') }} - {{ parent() }}{% endblock %}
+{% block html_title %}{% trans %}Cookies{% endtrans %} - {{ serviceName | trans }} - {{ parent() }}{% endblock %}
 
 {% set usageCookies = form.get('usageCookies') %}
 {% set referer = form.get('referer') %}
