--- a/service-front/app/src/Common/templates/layout/default.html.twig
+++ b/service-front/app/src/Common/templates/layout/default.html.twig
@@ -43,40 +43,12 @@
 
 <body class="govuk-template__body ">
 
-{% set service_name = ((application == 'actor') ? 'Use' : 'View') ~ ' a lasting power of attorney' %}
-
 <a href="#main-content" class="govuk-skip-link">{% trans %}Skip to main content{% endtrans %}</a>
 {% if application == 'actor' %}
     {{ include('@actor/partials/use-session-dialog.html.twig') }}
 {% endif %}
 
-<form>
-    <div class="govuk-cookie-banner" data-nosnippet role="region" aria-label="Cookies on {{ service_name }}" hidden>
-        <div class="govuk-cookie-banner__message govuk-width-container">
-
-            <div class="govuk-grid-row">
-                <div class="govuk-grid-column-two-thirds">
-                    <h2 class="govuk-cookie-banner__heading govuk-heading-m"> {% trans with { '%service_name%' : service_name|trans } %}Cookies on %service_name%{% endtrans %}</h2>
-
-                    <div class="govuk-cookie-banner__content">
-                        <p class="govuk-body">{% trans %}We use some essential cookies to make this service work.{% endtrans %}</p>
-                        <p class="govuk-body">{% trans %}We’d also like to use analytics cookies so we can understand how you use the service and make improvements.{% endtrans %}</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="govuk-button-group">
-                <button value="accept" type="button" name="cookies" class="govuk-button" data-module="govuk-button">
-                    {% trans %}Accept analytics cookies{% endtrans %}
-                </button>
-                <button value="reject" type="button" name="cookies" class="govuk-button" data-module="govuk-button">
-                    {% trans %}Reject analytics cookies{% endtrans %}
-                </button>
-                <a class="govuk-link" href="{{ path('cookies') }}">{% trans %}View cookies{% endtrans %}</a>
-            </div>
-        </div>
-    </div>
-</form>
+{{  include('@partials/cookie-banner.html.twig') }}
 
 {% if feature_enabled('allow_gov_one_login') %}
     {{ include("@partials/header/one-login.html.twig") }}
@@ -86,65 +58,7 @@
 
 {% block content %}{% endblock %}
 
-{{ include("@partials/footers-common.html.twig") }}
-
-<footer class="govuk-footer " role="contentinfo">
-    <div class="govuk-width-container ">
-        <div class="govuk-footer__meta">
-            <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
-                <h2 class="govuk-visually-hidden">{% trans %}Support links{% endtrans %}</h2>
-                <ul class="govuk-footer__inline-list">
-                    <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="{{ path('terms-of-use') }}">
-                            {% trans %}Terms of use{% endtrans %}
-                        </a>
-                    </li>
-                    <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="{{ path('privacy-notice') }}">
-                            {% trans %}Privacy notice{% endtrans %}
-                        </a>
-                    </li>
-                    <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="{{ path('cookies') }}">
-                            {% trans %}Cookies{% endtrans %}
-                        </a>
-                    </li>
-                    <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="{{ path('accessibility-statement') }}">
-                            {% trans %}Accessibility statement{% endtrans %}
-                        </a>
-                    </li>
-                    <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="{{ path('contact-us') }}">
-                            {% trans %}Contact us{% endtrans %}
-                        </a>
-                    </li>
-                    <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="https://www.gov.uk/government/organisations/office-of-the-public-guardian">
-                            {% trans %}Built by OPG Digital{% endtrans %}
-                        </a>
-                    </li>
-                </ul>
-
-                <svg aria-hidden="true" role="presentation" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 483.2 195.7" height="17" width="41">
-                    <path fill="currentColor" d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
-                    />
-                </svg>
-                <span class="govuk-footer__licence-description">
-                {% trans %}
-                    All content is available under the
-                    <a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">
-                        Open Government Licence v3.0
-                    </a>, except where otherwise stated
-                {% endtrans %}
-                </span>
-            </div>
-            <div class="govuk-footer__meta-item">
-                <a class="govuk-footer__link govuk-footer__copyright-logo" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">{% trans %}© Crown copyright{% endtrans %}</a>
-            </div>
-        </div>
-    </div>
-</footer>
+{{ include("@partials/footer.html.twig") }}
 
 <script src="{{ asset('index.js') }}" type="module"></script>
 {% block javascript %}{% endblock %}
