Usage of serviceName variable instead of block in both viewer and actor sides

--- a/service-front/app/src/Actor/templates/actor/layout.html.twig
+++ b/service-front/app/src/Actor/templates/actor/layout.html.twig
@@ -1,5 +1,3 @@
 {% extends '@layout/default.html.twig' %}
 
-{% block html_title %}{{ block('service_name') }} - {{ parent() }} {% endblock %}
-
-{% block service_name %}{% trans %}Use a lasting power of attorney{% endtrans %}{% endblock %}
+{% block html_title %}{{ serviceName | trans }} - {{ parent() }} {% endblock %}
