--- a/service-front/app/src/Viewer/templates/viewer/layout.html.twig
+++ b/service-front/app/src/Viewer/templates/viewer/layout.html.twig
@@ -1,5 +1,3 @@
 {% extends '@layout/default.html.twig' %}
 
-{% block html_title %}{{ block('service_name') }} - {{ parent() }} {% endblock %}
-
-{% block service_name %}{% trans %}View a lasting power of attorney{% endtrans %}{% endblock %}
+{% block html_title %}{{ serviceName }} - {{ parent() }} {% endblock %}
