--- a/service-front/app/src/Common/templates/layout/default.html.twig
+++ b/service-front/app/src/Common/templates/layout/default.html.twig
@@ -172,7 +172,7 @@
     </div>
 </footer>
 
-<script async src="{{ asset('index.js') }}"></script>
+<script src="{{ asset('index.js') }} type="module"></script>
 {% block javascript %}{% endblock %}
 </body>
 </html>
